--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no, viewport-fit=cover"
-		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Wide selection of knives for kitchen, hunting, and outdoor activities. Buy high-quality knives online." />
+		<meta name="keywords" content="knife store, buy knife, hunting knives, outdoor knives, kitchen knives, quality knives" />
+		<meta property="og:title" content="Knives Store" />
+		<meta property="og:description" content="A wide range of knives for all needs: kitchen, hunting, outdoor." />
+		<meta property="og:image" content="https://example.com/og-image-knives.jpg" />
+		<meta property="og:url" content="https://example.com/" />
+		<meta property="og:type" content="website" />
+		<meta name="theme-color" content="#000000" />
+		<link rel="icon" href="assets/images/favicon.ico" />
+		<link rel="preload" as="image" href="assets/images/welcome_bg.webp" type="image/webp" />
+		<title>Knives Store</title>
+
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-			rel="stylesheet"
-		/>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="src/index.css" />
-		<title>Knifes</title>
 	</head>
 	<body>
 		<div id="root" class="main_wrapper"></div>
